--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,32 +45,33 @@
             <div class="nav-links" id="navLinks" role="menubar">
                 <a href="/" class="nav-link" role="menuitem">Home</a>
                 <a href="/blog" class="nav-link" role="menuitem">Blog</a>
-                <div class="nav-dropdown">
-                    <a href="/projects" class="nav-link" role="menuitem" aria-haspopup="true" aria-expanded="false" aria-controls="projects-menu">Projects <i class="fas fa-chevron-down"></i></a>
-                    <div class="dropdown-content" id="projects-menu" role="menu">
+                <details class="nav-dropdown">
+                    <summary class="nav-link" role="button" aria-haspopup="true" aria-expanded="false">Projects <i class="fas fa-chevron-down"></i></summary>
+                    <div class="dropdown-content" role="menu">
+                        <a href="/projects"><i class="fas fa-folder-open"></i> All Projects</a>
                         <a href="/projects#featured"><i class="fas fa-star"></i> Featured Projects</a>
                         <a href="/github-projects"><i class="fab fa-github"></i> GitHub Projects</a>
                         <a href="/projects#healthcare"><i class="fas fa-heartbeat"></i> Healthcare</a>
                         <a href="/projects#enterprise"><i class="fas fa-building"></i> Enterprise</a>
                         <a href="/projects#data-science"><i class="fas fa-chart-line"></i> Data Science</a>
                     </div>
-                </div>
-                <div class="nav-dropdown">
-                    <a href="/competencies" class="nav-link" role="menuitem" aria-haspopup="true" aria-expanded="false" aria-controls="competencies-menu">Core Competencies <i class="fas fa-chevron-down"></i></a>
-                    <div class="dropdown-content" id="competencies-menu" role="menu">
+                </details>
+                <details class="nav-dropdown">
+                    <summary class="nav-link" role="button" aria-haspopup="true" aria-expanded="false">Core Competencies <i class="fas fa-chevron-down"></i></summary>
+                    <div class="dropdown-content" role="menu">
                         <a href="/competencies#enterprise-architecture"><i class="fas fa-sitemap"></i> Enterprise Architecture</a>
                         <a href="/competencies#technical-leadership"><i class="fas fa-users"></i> Technical Leadership</a>
                         <a href="/competencies#development-stack"><i class="fas fa-code"></i> Development Stack</a>
                     </div>
-                </div>
-                <div class="nav-dropdown">
-                    <a href="/architecture" class="nav-link" role="menuitem" aria-haspopup="true" aria-expanded="false" aria-controls="architecture-menu">Architecture <i class="fas fa-chevron-down"></i></a>
-                    <div class="dropdown-content" id="architecture-menu" role="menu">
+                </details>
+                <details class="nav-dropdown">
+                    <summary class="nav-link" role="button" aria-haspopup="true" aria-expanded="false">Architecture <i class="fas fa-chevron-down"></i></summary>
+                    <div class="dropdown-content" role="menu">
                         <a href="/architecture#core-principles"><i class="fas fa-cubes"></i> Core Principles</a>
                         <a href="/architecture#technology-stack"><i class="fas fa-layer-group"></i> Technology Stack</a>
                         <a href="/architecture#design-patterns"><i class="fas fa-puzzle-piece"></i> Design Patterns</a>
                     </div>
-                </div>
+                </details>
                 <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
                     <i class="fas fa-moon"></i>
                 </button>
